<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/fragment_service_start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_start" />

        <Button
            android:id="@+id/fragment_service_stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/service_stop" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_service_text_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/time_interval" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/fragment_service_text_interval_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>